ssd-requisites-verification/pvc-test.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-test
spec:
  containers:
  - name: test-container
    image: alpine   # Tiny image
    command: ["sleep", "3600"]
    volumeMounts:
    - mountPath: "/mnt/test"    
      name: ebs-volume
  volumes:
  - name: ebs-volume
    persistentVolumeClaim:
      claimName: pvc-test
