ssd-requisites-verification/lb-test.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-additional-resource-tags: Name=nlb-verification
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-port: traffic-port
    service.beta.kubernetes.io/aws-load-balancer-ip-address-type: ipv4
    service.beta.kubernetes.io/aws-load-balancer-name: opsmxnlb
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: instance
    #service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-scheme: internal
    service.beta.kubernetes.io/aws-load-balancer-subnets: subnet-04480eef9655bd567, subnet-0384ee7e483f4737d
    service.beta.kubernetes.io/aws-load-balancer-security-groups: sg-0797c17b80a6daf0d
    service.beta.kubernetes.io/aws-load-balancer-manage-backend-security-group-rules: "false"
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
  labels:
    app: ssd
  name: nlb-svc
spec:
  type: LoadBalancer
  selector:
    app: web
  ports:
  - name: rabbitmq
    nodePort: 30301
    port: 8080
    protocol: TCP
    targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-ing
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: opsmxalb
    alb.ingress.kubernetes.io/ip-address-type: ipv4
    #alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/healthy-threshold-count: '3'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/subnets: subnet-04480eef9655bd567, subnet-0384ee7e483f4737d
    alb.ingress.kubernetes.io/security-groups: k8s-gd-rabbitmq-07089dcc75, sg-00490d29dc05dde47
    alb.ingress.kubernetes.io/manage-backend-security-group-rules: "false"
spec:
  ingressClassName: alb
  rules:
    - http:
         paths:
           - path: /v1
             pathType: Prefix
             backend:
               service:
                 name: web
                 port:
                   number: 8080
           - path: /
             pathType: Prefix
             backend:
               service:
                 name: web
                 port:
                   number: 8080
